styles/layout.scss
// See: https://sass-lang.com/

/* =============
    Global
================ */
* {
  margin: 0;
}
$primary-btn-color: #35d461;
$secondary-btn-color: #37b6f6;
$home-page-bg-color: #72d4f5;
$story-page-bg-color: #047cac;
$user-stories-bg-color: #9ad2a9;
$primary-bg-color: #f5f5f5;
$box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12);
body {
  background-color: $primary-bg-color;
  background-image: url("../public/imgs/v661-tk-24-watercolorpattern.jpg");
  h1 {
    color: #244751;
    font-family: "Gloria Hallelujah", cursive;
    text-align: center;
    font-size: 4rem;
  }
  font-family: "Source Sans Pro", sans-serif;
}

button {
  padding: 0.3em 0.7em;
  border: 0;
  border-radius: 5px;
  background-color: $primary-btn-color;
  transition: 200ms ease-in;
  &:hover {
    cursor: pointer;
    background: darken($primary-btn-color, 5%);
  }
}

/* =============
    Typography
================ */

/* =============
    Layout
================ */

.app-container {
  margin-top: 3em;
  width: 75%;
  min-width: 375px;
  max-width: 1000px;
  margin: 0 auto;
}
.content-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 16px;
  min-height: 75vh;
  background: $home-page-bg-color;
  box-shadow: $box-shadow;
  padding: 2em;
}

.view-story-container {
  border: 2px solid blue;
  display: flex;
  flex-direction: row-reverse;
  align-items: flex-start;
  justify-content: space-between;
  padding: 2em;
  .story-article {
    margin-top: 0;
    width: 50%;
  }
  .side-bar {
    width: 45%;
  }
  .text-field {
    width: 100%;
  }
}
.view-user-page {
  background: $user-stories-bg-color;
}

// Main Tab headers

.nav-tabs {
  display: flex;
  justify-content: space-evenly;
  #home-page {
    background: $home-page-bg-color;
  }
  #user-page {
    background: $user-stories-bg-color;
  }
  li {
    font-size: 2rem;
    font-weight: 600;
    list-style: none;
    border-bottom: 0;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
    padding: 0.2em 0.8em;
    &:hover {
      cursor: pointer;
    }
  }
}

// Home-tab
.create-story-btn {
  display: block;
  position: fixed;
  bottom: 45px;
  right: 180px;
  z-index: 99;
  background: $story-page-bg-color;
  color: #fff;
  border: 0;
  width: 70px;
  height: 70px;
  border-radius: 50%;
  transition: 200ms ease-in;
  &:hover {
    background: darken($story-page-bg-color, 5%);
    cursor: pointer;
  }
  i {
    font-size: 2em;
    color: #fff;
  }
}

.create-modal {
  h2 {
    text-align: center;
    font-family: "Gloria Hallelujah", cursive;
  }
}

.modal {
  background: yellow !important;
}

.create-story-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 85%;
  margin: 0 auto;
  input,
  textarea {
    width: 75%;
    padding: 0.5em;
  }
  textarea {
    resize: none;
  }
  button {
    padding: 0.3em 0.7em;
    border: 0;
    border-radius: 5px;
    background-color: $primary-btn-color;
    transition: 200ms ease-in;
    &:hover {
      cursor: pointer;
      background: darken($primary-btn-color, 5%);
    }
  }
}

// story article
.story-article {
  background: $primary-bg-color;
  box-shadow: $box-shadow;
  width: 85%;
  max-width: 550px;
  border-radius: 5px;
  margin-top: 2em;
  padding: 1.5em;
  header {
    display: flex;
    justify-content: space-between;

    div {
      display: flex;
    }
  }
  .avatar {
    margin-left: 0.5em;
    width: 25px;
    height: 25px;
  }

  .story-content {
    padding: 1.5em 0;
  }

  footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
}

.story-article:first-child {
  margin-top: 5em;
}

// Story Tab

.contribution-widget {
  background: $story-page-bg-color;
  padding: 1em;
  border-radius: 10px;
  h2 {
    padding: 0.3em;
    margin-bottom: 1em;
  }

  form {
    display: flex;
    flex-direction: column;
  }
  textarea {
    resize: none;
    padding: 0.5em;
    border-radius: 10px;
  }
  button {
    width: 30%;
    margin-right: auto;
  }
}

.contribution {
  border-radius: 16px;
  margin-top: 2em;
  padding: 1.5em;
  padding: 1em;
  transition: 200ms ease-in;
  &:hover {
    box-shadow: $box-shadow;
  }
  header {
    font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: space-between;
    .avatar {
      margin-left: 0.5em;
      width: 25px;
      height: 25px;
    }
    div {
      display: flex;
      align-items: center;
      p {
        border: 0;
      }
    }
  }
  p {
    padding: 1em 0;
    border-bottom: 2px solid #244751;
  }
  footer {
    display: flex;
    margin-top: 0.5em;
    justify-content: space-between;
    small {
      font-weight: 600;
    }
  }
  .contribution-btn-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    &:hover {
      cursor: pointer;
    }
    button {
      display: flex;
      justify-content: center;
      width: 50%;
      background: 0;
    }
    i {
      transition: 200ms ease-in;
      &:hover {
        transform: scale(1.2);
      }
    }
  }
}

